# GSAM

./: Aligner.cpp  Aligner.h  AlignmentGraph.cpp  AlignmentGraph.h  AlignmentResult.cpp  AlignmentResult.h  ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  DpParser.cpp  DpParser.h  GfaGraph.cpp  MatchResult.cpp  MatchResult.h  README.md  ThreadSafeQueue.h  a.out  exSAM.cpp  exSAM.h  fastqloader.cpp  fastqloader.h  gsam  main.cpp  makefile  res.gaf
test/: chr4_GL000008v2_random.gfa  chr4_GL000008v2_random_read1000.fa  wrong_read1000.fa
